# 2022-advent

./: .cookie.secret  .gitignore  Cargo.toml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
