[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
tokio = { version = "1.22.0", features = ["full"] }

[[bin]]
name = "new"
path = "bin/new.rs"

[[bin]]
name = "fetch"
path = "bin/fetch.rs"

[[bin]]
name = "1"
path = "bin/1.rs"
