[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
tokio = { version = "1.22.0", features = ["full"] }

[[bin]]
name = "new"
path = "bin/new.rs"

[[bin]]
name = "fetch"
path = "bin/fetch.rs"

[[bin]]
name = "1"
path = "bin/1.rs"

[[bin]]
name = "2"
path = "bin/2.rs"

[[bin]]
name = "3"
path = "bin/3.rs"

[[bin]]
name = "4"
path = "bin/4.rs"

[[bin]]
name = "5"
path = "bin/5.rs"

[[bin]]
name = "6"
path = "bin/6.rs"

[[bin]]
name = "7"
path = "bin/7.rs"

[[bin]]
name = "8"
path = "bin/8.rs"

[[bin]]
name = "9"
path = "bin/9.rs"

[[bin]]
name = "10"
path = "bin/10.rs"

[[bin]]
name = "11"
path = "bin/11.rs"
